--- a/index.html
+++ b/index.html
@@ -355,8 +355,12 @@
             // TIER 2: Financial Modeling Prep (FALLBACK #1 - generous daily limit)
             if (fmpKey) {
                 try {
-                    const url = `https://financialmodelingprep.com/api/v3/quote/${symbol}?apikey=${fmpKey}`;
-                    const response = await fetch(url);
+                    const url = `https://financialmodelingprep.com/api/v3/quote/${symbol}`;
+                    const response = await fetch(url, {
+                        headers: {
+                            'apikey': fmpKey
+                        }
+                    });
                     
                     if (response.ok) {
                         const data = await response.json();
@@ -370,6 +374,8 @@
                                 success: true 
                             };
                         }
+                    } else {
+                        console.log(`FMP HTTP ${response.status} for ${symbol}`);
                     }
                 } catch (err) {
                     console.log(`FMP failed for ${symbol}:`, err.message);
