CORS Issue Fixed!
The Problem:
When using custom headers (like apikey: xxx), browsers send a "preflight" OPTIONS request first. FMP's API doesn't properly handle this preflight request, causing CORS errors.
The Solution:
Back to URL parameter authentication - simple GET requests don't trigger preflight:

--- a/index.html
+++ b/index.html
@@ -355,12 +355,9 @@
             // TIER 2: Financial Modeling Prep (FALLBACK #1 - generous daily limit)
             if (fmpKey) {
                 try {
-                    const url = `https://financialmodelingprep.com/api/v3/quote/${symbol}`;
-                    const response = await fetch(url, {
-                        headers: {
-                            'apikey': fmpKey
-                        }
-                    });
+                    // Note: Using URL parameter instead of header to avoid CORS preflight
+                    const url = `https://financialmodelingprep.com/api/v3/quote/${symbol}?apikey=${fmpKey}`;
+                    const response = await fetch(url);
                     
                     if (response.ok) {
                         const data = await response.json();
@@ -374,6 +371,8 @@
                                 success: true 
                             };
                         }
+                    } else if (response.status === 403) {
+                        console.log(`FMP 403 for ${symbol} - check API key`);
                     } else {
                         console.log(`FMP HTTP ${response.status} for ${symbol}`);
                     }
